--- a/index.html
+++ b/index.html
@@ -42,23 +42,28 @@
         }
 
         .profile-header {
-    display: flex;
-    align-items: center;
-    gap: 20px; /* Space between image and text */
-    margin-bottom: 15px;
-}
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            /* Space between image and text */
+            margin-bottom: 15px;
+        }
 
-.profile-img {
-    width: 80px; /* Adjust size as needed */
-    height: 80px;
-    border-radius: 50%; /* Makes the image circular */
-    object-fit: cover; /* Prevents stretching */
-    border: 2px solid #ddd;
-}
+        .profile-img {
+            width: 80px;
+            /* Adjust size as needed */
+            height: 80px;
+            border-radius: 50%;
+            /* Makes the image circular */
+            object-fit: cover;
+            /* Prevents stretching */
+            border: 2px solid #ddd;
+        }
 
-.title-text h1 {
-    margin: 0; /* Removes default spacing */
-}
+        .title-text h1 {
+            margin: 0;
+            /* Removes default spacing */
+        }
 
 
         header h1 {
@@ -105,11 +110,13 @@
 
 
         .profile-img {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             border: 4px solid white;
-            margin-bottom: 1rem;
+            margin-bottom: 0rem;
+                margin-top: 10px;
+
         }
 
         .container {
@@ -153,7 +160,7 @@
             justify-content: center;
             gap: 1.5rem;
             flex-wrap: wrap;
-            margin-top: 1rem;
+            margin-top: 0rem;
         }
 
         .contact-info a {
