--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             font-size: 1rem;
             color: #cccccc;
             margin: 0;
-            text-transform: uppercase;
+            text-transform: capitalize;
             letter-spacing: 0px;
             font-weight: 500;
         }
@@ -195,9 +195,9 @@
     <header>
         <div class="header-container">
             <div class="profile-header">
-                <img src="profile.jpg" alt="Dhrub Chaudhary" class="profile-img">
+                <img src="profile-image.jpg" alt="Dhrub Chaudhary" class="profile-img">
                 <div class="title-text">
-                    <h1>DHRUB CHAUDHARY</h1>
+                    <h1>Dhrub Chaudhary</h1>
                     <p>Experienced Software Engineer</p>
                 </div>
             </div>
