--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
             /* Blue icons for a professional pop of color */
         }
 
+        .job-meta-address {
+            font-weight: 500;
+                        padding-bottom: 8px;
+
+        }
+
+        .job-sector {
+            font-weight: 600;
+            padding-bottom: 8px;
+        }
+
 
         .profile-img {
             width: 100px;
@@ -115,7 +126,7 @@
             border-radius: 50%;
             border: 4px solid white;
             margin-bottom: 0rem;
-                margin-top: 10px;
+            margin-top: 10px;
 
         }
 
@@ -152,7 +163,7 @@
         .job-meta {
             font-style: italic;
             color: #666;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0rem;
         }
 
         .contact-info {
@@ -251,6 +262,7 @@
             <div class="experience-item">
                 <div class="job-title">Software Engineer</div>
                 <div class="job-meta">Metalogic Software Pvt. Ltd. | 2024 – 2025</div>
+                <div class="job-meta-address">Babarmahal, Kathmandu  2024-2025 ( Full Time)</div>
                 <ul>
                     <li>Developed genealogy and caste management systems.</li>
                     <li>Managed AWS deployments and CI/CD pipelines.</li>
@@ -261,6 +273,10 @@
             <div class="experience-item">
                 <div class="job-title">Associate Software Engineer</div>
                 <div class="job-meta">Tukaatu Services Pvt. Ltd. | 2020 – 2023</div>
+                <div class="job-meta-address">Itahari, Sunsari 2020-2023 ( Full Time)</div>
+
+                <div class="job-sector">Logistics & E-commerce platforms</div>
+
                 <ul>
                     <li>Built and maintained logistics web applications with focus on UI performance, real-time
                         workflows, and user-friendly interfaces.</li>
