--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Dhrub Chaudhary | Software Engineer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com" />
     <link rel="stylesheet" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
 
     <style>
         :root {
@@ -74,7 +76,7 @@
         }
 
         header p {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: #cccccc;
             margin: 0;
             text-transform: capitalize;
@@ -104,19 +106,22 @@
         }
 
         .contact-info i {
-            color: #004494;
+            color: #ffffff;
             /* Blue icons for a professional pop of color */
         }
 
         .job-meta-address {
             font-weight: 500;
-                        padding-bottom: 8px;
+            padding-bottom: 8px;
+            font-size: 0.8rem;
 
         }
 
         .job-sector {
-            font-weight: 600;
+            font-weight: bold;
             padding-bottom: 8px;
+            font-size: 0.9rem;
+
         }
 
 
@@ -134,7 +139,7 @@
             max-width: 900px;
             margin: 0rem auto;
             background: white;
-            padding: 2rem;
+            padding: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
@@ -142,28 +147,35 @@
         h2 {
             color: var(--dark-blue);
             margin-top: 0;
+            font-size: 20px;
+        }
+
+        p{
+            font-size:0.9rem;
         }
 
         .section-title {
             border-bottom: 2px solid var(--primary-blue);
+            border-bottom-style: dashed;
             padding-bottom: 0.5rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 0.5rem;
         }
 
         .experience-item {
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .job-title {
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 1rem;
             color: var(--primary-blue);
         }
 
         .job-meta {
-            font-style: italic;
-            color: #666;
+            color: #000000;
             margin-bottom: 0rem;
+            font-size: 1rem;
+            font-weight: 600;
         }
 
         .contact-info {
@@ -186,10 +198,12 @@
 
         ul {
             padding-left: 1.2rem;
+            margin-top:0rem;
         }
 
         li {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.2rem;
+            font-size: 0.9rem;
         }
 
         footer {
@@ -206,7 +220,7 @@
     <header>
         <div class="header-container">
             <div class="profile-header">
-                <img src="profile-image.jpg" alt="Dhrub Chaudhary" class="profile-img">
+                <img src="img/profile-image.jpg" alt="Dhrub Chaudhary" class="profile-img">
                 <div class="title-text">
                     <h1>Dhrub Chaudhary</h1>
                     <p>Experienced Software Engineer</p>
